--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
         <p>20% de descuento en todos los productos!</p>
         <div class="name">
+            <a href="https://es.pngtree.com"> Pngtree.com</a>
             <h1>Nombre Tienda</h1>
         </div>
         <nav> Barra de navegación</nav>
