Se configuran cabecera y footer

--- a/index.html
+++ b/index.html
@@ -6,24 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,500&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <header>
         <p>20% de descuento en todos los productos!</p>
         <div class="name">
-            <a href="https://es.pngtree.com"> Pngtree.com</a>
+            <img src="./images/logo.svg" alt="logo">
             <h1>Nombre Tienda</h1>
         </div>
-        <nav> Barra de navegación</nav>
+        <nav>
+            <span>Contacto</span>
+            <span>Registrarme</span>
+            <span>Ingresar</span>            
+        </nav>
     </header>
-    <section>
+    <div class="cards">
         <p>Cards</p>
-    </section>
+    </div>
     <footer>
-        <p>footer</p>
+        <p>&#169; Oscar A Peñuela - Digital House</p>
     </footer>
 </body>
 </html>
