Se acomoda el menu de navegacion

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
             <h1>Nombre Tienda</h1>
         </div>
         <nav>
-            <span>Contacto</span>
-            <span>Registrarme</span>
-            <span>Ingresar</span>            
+            <ul>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Registrarme</a></li>
+                <li><a href="#">Ingresar</a></li>                        
+            </ul>
         </nav>
     </header>
     <div class="cards">
