Se crea la estructura de las cartas, se fija el header, se agrega el icono plus

--- a/index.html
+++ b/index.html
@@ -24,11 +24,35 @@
             </ul>
         </nav>
     </header>
-    <div class="cards">
-        <p>Cards</p>
-    </div>
+    <main>
+        <div class="card">card1
+            <div class="card-img">
+                imagen 1
+            </div>
+            <div class="card-text">
+                <h2>BATMAN</h2>
+            </div>        
+        </div>
+        <div class="card">card2
+            <div class="card-img">
+                imagen 1
+            </div>
+            <div class="card-text">
+                <h2>SUPERMAN</h2>
+            </div> 
+        </div>
+        <div class="card">card3
+            <div class="card-img">
+                imagen 1
+            </div>
+            <div class="card-text">
+                <h2>MUJER MARAVILLA</h2>
+            </div> 
+        </div>
+    </main>
     <footer>
         <p>&#169; Oscar A Peñuela - Digital House</p>
+        <img src="./images/plus.svg" alt="logo" class="plus">
     </footer>
 </body>
 </html>
