Se insertan las imágenes y se ubican en las tarjetas

--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
         </nav>
     </header>
     <main>
-        <div class="card">card1
+        <div class="card">
             <div class="card-img">
-                imagen 1
+                <img src="./images/batman.png" class="img" alt="Batman">
             </div>
             <div class="card-text">
                 <h2>BATMAN</h2>
             </div>        
         </div>
-        <div class="card">card2
+        <div class="card">
             <div class="card-img">
-                imagen 1
+                <img src="./images/Superman.png" class="img" alt="Superman">
             </div>
             <div class="card-text">
                 <h2>SUPERMAN</h2>
             </div> 
         </div>
-        <div class="card">card3
+        <div class="card">
             <div class="card-img">
-                imagen 1
+                <img src="./images/wonderwoman.jpg" class="img" alt="Mujer Maravilla">
             </div>
             <div class="card-text">
                 <h2>MUJER MARAVILLA</h2>
