--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
@@ -25,27 +26,30 @@
         </nav>
     </header>
     <main>
-        <div class="card">
-            <div class="card-img">
-                <img src="./images/batman.png" class="img" alt="Batman">
+        <div class="card" >
+            <div class="card-img bg-1">
+                <span class="fas fa-heart fa-lg"></span>
             </div>
-            <div class="card-text">
+            <div class="card-content">
+                <img src="./images/batman.png" class="img" alt="Batman">
                 <h2>BATMAN</h2>
             </div>        
         </div>
         <div class="card">
-            <div class="card-img">
-                <img src="./images/Superman.png" class="img" alt="Superman">
+            <div class="card-img bg-2">
+                <span class="fas fa-heart fa-lg"></span>
             </div>
-            <div class="card-text">
+            <div class="card-content">
+                <img src="./images/Superman.png" class="img" alt="Superman">
                 <h2>SUPERMAN</h2>
             </div> 
         </div>
         <div class="card">
-            <div class="card-img">
-                <img src="./images/wonderwoman.jpg" class="img" alt="Mujer Maravilla">
+            <div class="card-img bg-3">
+                <span class="fas fa-heart fa-lg"></span>
             </div>
-            <div class="card-text">
+            <div class="card-content">
+                <img src="./images/wonderwoman.jpg" class="img" alt="Mujer Maravilla">
                 <h2>MUJER MARAVILLA</h2>
             </div> 
         </div>
